<resources>
  <string name="app_name">Water Recomendation</string>
  <string name="activity_in_vehicle">In Vehicle</string>
  <string name="activity_on_bicycle">On Bicycle</string>
  <string name="activity_on_foot">On Foot</string>
  <string name="activity_running">Running</string>
  <string name="activity_still">Still</string>
  <string name="activity_tilting">Tilting</string>
  <string name="activity_walking">walking</string>
  <string name="activity_unknown">Unknown</string>
  <string name="navigation_drawer_open">Open Navigation Drawer</string>
  <string name="navigation_drawer_close">Close Navigation Drawer</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="support_email">support@bitocode.web.id</string>
  <string name="register">Register</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="nama_lengkap">Nama Lengkap</string>
  <string name="tanggal_lahir">Tanggal Lahir</string>
  <string name="jenis_kelamin">Jenis Kelamin</string>
  <string name="pria">Pria</string>
  <string name="wanita">Wanita</string>
  <string name="tinggi_badan">Tinggi Badan (cm)</string>
  <string name="berat_badan">Berat Badan (kg)</string>
  <string name="back">Back</string>
  <string name="validasi_tanggal">Maaf tanggal tidak valid</string>

  <string name="next">Next</string>
  <string name="skip">Skip</string>
  <string name="start">Start</string>
  <string name="pause">Pause</string>

  <string name="slide_1_title">Running</string>
  <string name="slide_1_desc">The easiest way to record your run</string>

  <string name="slide_2_title">Walking</string>
  <string name="slide_2_desc">Will try to detect when you running or walking</string>

  <string name="slide_3_title">Cycling</string>
  <string name="slide_3_desc">It also can detect when you are cyling with your bike</string>

  <string name="play_again">Play Again</string>
  <string name="appicon">AppIcon</string>
  <string name="login">Login</string>
  <string name="lupa_password_klik_disini">Lupa password klik disini</string>
  <string name="username">Username</string>
  <string name="create_new_account">Create New Account ?</string>
  <string name="lupa_password">Lupa Password</string>
  <string name="confirm">Confirm</string>
  <string name="lupa_pass_desc">Masukkan email atau username anda</string>
  <string name="email_username">Email/Username</string>
  <string name="menu_pengaturan">Pengaturan</string>
  <string name="menu_keluar">Keluar</string>
  <string name="menu_update_profil">Update Profil</string>
  <string name="menu_ganti_password">Ganti Password</string>
  <string name="menu_dashboard">Dashboard</string>
  <string name="menu_rekomendasi">Rekomendasi</string>
  <string name="menu_riwayat">Riwayat</string>
  <string name="menu_activity_recognition">Activity Recognition</string>
  <string name="password_lama">Password Lama</string>
  <string name="password_baru">Password Baru</string>
  <string name="ulangi_password_baru">Ulangi Password Baru</string>
  <string name="update">Update</string>
  <string name="rekomendasi_personal">Rekomendasi Personal (ml)</string>
  <string name="title_activity_maps">Map</string>
  <string name="starts">Start</string>
  <string name="start_tracking">Start Tracking</string>
  <string name="stop_tracking">Stop Tracking</string>
  <string name="stop">Stop</string>
  <string name="reset">Reset</string>
  <string name="tanggal">Tanggal</string>
  <string name="jarak_tempuh">Jarak Tempuh</string>
  <string name="waktu">Waktu</string>
  <string name="rekomendasi_awal">Rekomendasi Awal</string>
  <string name="rekomendasi_akhir">Rekomendasi Akhir</string>
  <string name="title_activity_main">MainActivity</string>


  <string name="user_profile">User Profile</string>
  <string name="nama_dashboard">Nama :</string>
  <string name="ttl_dashboard">Tanggal Lahir :</string>
  <string name="tinggi_dashboard">Tinggi :</string>
  <string name="berat_dashboard">Berat :</string>
  <string name="jenisaktivitas_dashboard">Jenis Aktivitas :</string>
  <string name="tanggalaktivitas_dashboard">Tanggal Aktivitas :</string>
  <string name="jarak_dashboard">Jarak :</string>
  <string name="waktu_dashboard">Waktu :</string>
  <string name="rekomendasiawal_dashboard">Rekomendasi Awal :</string>
  <string name="rekomendasiakhir_dashboard">Rekomendasi Akhir :</string>
  <string name="activity_image">Activity Image</string>
  <string name="riwayat_terakhir">Riwayat Terakhir</string>
  <string name="walking_time">Walking Time :</string>
  <string name="running_time">Running Time :</string>
  <string name="confidence">Confidence : %1$d</string>
  <string name="simpan">Simpan</string>
  <string name="jenis_aktivitas">Jenis Aktivitas</string>
  <string name="slider_image">Slider Image</string>
  <string name="kosong">Kosong</string>
  <string name="detail">Detail :</string>
  <string name="_1">1</string>
  <string name="km">Km</string>
  <string name="m">m</string>
  <string name="jam">Jam</string>
  <string name="menit">menit</string>
  <string name="hitung">Hitung</string>
  <string name="map_peringatan">Jika waktu olahraga melebihi 1 jam disarankan jangan hanya minum air putih cari minuman yang memiliki karbohidrat seperti jus atau sport drink</string>
  <string name="rekomendasi_awal_maps_jarak">Rekomendasi awal berdasarkan jarak:</string>
  <string name="rekomendasi_awal_maps_waktu">Rekomendasi awal berdasarkan waktu:</string>
  <string name="rekomendasi_awal_maps_median">Rekomendasi awal berdasarkan rata-rata:</string>
  <string name="details_message_activity_permission_rational">This app\'s experience requires access to your phone\'s activity transitions to display changes from walking to standing still.</string>
  <string name="no_thanks_activity_permission_rational">No Thanks</string>
  <string name="continue_activity_permission_rational">Continue</string>
  <string name="main_message_activity_permission_rational">Track activity changes by letting us read your phone\'s activity transitions.</string>
  <string name="tanggal_aktivitas_simpan">Tanggal Aktivitas</string>
  <string name="mulai_aktivitas">Mulai Aktivitas</string>
</resources>
