<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
  android:layout_marginVertical="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".SimpanRekomendasiActivity">

  <EditText
    android:id="@+id/et_simpan_jenisaktivitas"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/jenis_aktivitas"
    android:ems="10"
    android:hint="@string/jenis_aktivitas"
    android:inputType="text" />

  <EditText
    android:id="@+id/et_simpan_tanggal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/tanggal_aktivitas_simpan"
    android:ems="10"
    android:hint="@string/tanggal_aktivitas_simpan"
    android:inputType="date" />

  <EditText
    android:id="@+id/et_simpan_jarak"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/jarak_tempuh"
    android:ems="10"
    android:hint="@string/jarak_tempuh"
    android:inputType="number" />

  <EditText
    android:id="@+id/et_simpan_waktu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/waktu"
    android:ems="10"
    android:hint="@string/waktu"
    android:inputType="number" />

  <EditText
    android:id="@+id/et_simpan_rekomendasiawal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/rekomendasi_awal"
    android:ems="10"
    android:hint="@string/rekomendasi_awal"
    android:inputType="number" />

  <EditText
    android:id="@+id/et_simpan_rekomendasiakhir"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/rekomendasi_akhir"
    android:ems="10"
    android:hint="@string/rekomendasi_akhir"
    android:inputType="number" />

  <Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:onClick="onSimpanRiwayatClick"
    android:text="@string/simpan" />
</LinearLayout>