<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
  android:layout_marginVertical="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".LupaPasswordActivity">

  <TextView
    android:id="@+id/tv_lupapass_lupapassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="90dp"
    android:text="@string/lupa_password"
    android:textSize="30sp" />

  <TextView
    android:id="@+id/tv_lupapass_lupapassdesc"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/lupa_pass_desc"
    android:textSize="12sp" />

  <EditText
    android:id="@+id/et_lupapass_identifier"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:autofillHints="@string/email_username"
    android:ems="10"
    android:hint="@string/email_username"
    android:inputType="text" />

  <LinearLayout
    style="?android:attr/buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <Button
      android:id="@+id/btn_lupapass_back"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_weight="1"
      android:text="@string/back" />

    <Button
      android:id="@+id/btn_lupapass_confirm"
      style="?android:attr/buttonBarButtonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_weight="1"
      android:text="@string/confirm" />
  </LinearLayout>

</LinearLayout>