<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:gravity="bottom"
  android:background="@drawable/nav_header"
  android:orientation="vertical"
  android:padding="16dp">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@mipmap/ic_launcher_round"
    android:contentDescription="@string/appicon" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingTop="8dp"
    android:text="@string/app_name"
    android:textColor="@color/colorBlack"
    android:textStyle="bold"
    android:textSize="14sp" />

  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/support_email"
    android:textStyle="bold"
    android:textColor="@color/colorBlack"
    android:textSize="12sp" />
</LinearLayout>