<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
  android:layout_marginVertical="@dimen/activity_vertical_margin"
  android:orientation="vertical"
  tools:context=".GantiPasswordActivity">

  <TextView
    android:id="@+id/tv_gantipass_oldpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/password_lama"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/et_gantipass_oldpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/password_lama"
    android:autofillHints="@string/password_lama" />

  <TextView
    android:id="@+id/tv_gantipass_passbaru1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/password_baru"
    android:textSize="18sp"/>

  <EditText
    android:id="@+id/et_gantipass_firstnewpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/password_baru"
    android:autofillHints="@string/password_baru"/>

  <EditText
    android:id="@+id/et_gantipass_secondnewpass"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/ulangi_password_baru"
    android:autofillHints="@string/ulangi_password_baru"/>

    <Button
      android:id="@+id/btn_gantipass_update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="30dp"
      android:onClick="onGantiPasswordUpdateClick"
      android:text="@string/update"
      style="?android:attr/buttonBarButtonStyle"/>

</LinearLayout>